<resources>
    <string name="app_name">Bridge</string>
    <string name="sign_in">로그인</string>
    <string name="input_id">아이디 입력</string>
    <string name="input_pw">비밀번호 입력</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="sign_up_with_email">이메일로 가입하기</string>
    <string name="error_wrong_id">아이디 형식이 잘못되었습니다</string>
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_profile_edite">프로필 수정</string>
    <string name="mypage_interest_office">즐겨찾기한 회사</string>
    <string name="mypage_interest_setting">관심분야 설정</string>
    <string name="mypage_notion">공지사항</string>
    <string name="mypage_app_setting">앱 설정</string>
    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_certification">인증</string>
    <string name="sign_up_hint_email">이메일 입력</string>
    <string name="sign_up_hint_pw">비밀번호 입력</string>
    <string name="sign_up_hint_repw">비밀번호 재입력</string>
    <string name="sign_up_text_next">다음</string>
    <string name="sign_up_hint_id">아이디 입력</string>
    <string name="show_all">모두보기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_click_hint">검색어를 입력해주세요</string>
    <string name="search_no_result">최근 검색어가 없습니다.</string>
    <string name="select_intersted_field">분야를 선택해주세요</string>
    <string name="title_select_interested_field">관심 분야 선택</string>
    <string name="sub_title_interested_field">종아하는 분야를 선택해주세요</string>
    <string name="design_category">디자인</string>
    <string name="management_category"><![CDATA[경영&회계]]></string>
    <string name="health_category"><![CDATA[보건&의료]]></string>
    <string name="environment_category"><![CDATA[환경&에너지]]></string>
    <string name="material_category">재료</string>
    <string name="electronic_category"><![CDATA[전기&전자]]></string>
    <string name="erection_category">건설</string>
    <string name="chemistry_category"><![CDATA[화학&바이오]]></string>
    <string name="plan_category"><![CDATA[기획&마케팅]]></string>
    <string name="print_category"><![CDATA[인쇄&공예]]></string>
    <string name="sales_category">영업판매</string>
    <string name="welfare_category">사회복지</string>
    <string name="affairs_category">사무</string>
    <string name="cloth_category"><![CDATA[섬유&의복]]></string>
    <string name="recent_search">최근 검색어</string>
    <string name="apply_collaboration">협업 신청하러가기</string>
    <string name="new_member">신규가입회사</string>
    <string name="calendar">일정</string>
    <string name="set_year">%d년 %d월</string>
    <string name="show_detail"><u>상세보기</u></string>
</resources>