<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.SearchFragment">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="276dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/search_background"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:hint="@string/search_click_hint"
            android:paddingStart="12dp"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/btnSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSearch"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etSearch"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSearchSubTitle"
            android:layout_width="137dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="204dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/select_intersted_field"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearch" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conSearchCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSearchSubTitle">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/conSearchInsideGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/conSearchInsideGuide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <CheckBox
                android:id="@+id/searchDesignCheckBox"
                android:layout_width="79dp"
                android:layout_height="32dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/design_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/conSearchInsideGuide"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/searchManagementCheckBox"
                android:layout_width="101dp"
                android:layout_height="32dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/management_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/conSearchInsideGuide2"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/searchHealthCheckBox"
                android:layout_width="101dp"
                android:layout_height="32dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/health_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/conSearchInsideGuide2"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/searchEnvironmentCheckBox"
                android:layout_width="101dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/environment_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/conSearchInsideGuide"
                app:layout_constraintTop_toBottomOf="@id/searchDesignCheckBox" />

            <CheckBox
                android:id="@+id/searchMaterialCheckBox"
                android:layout_width="66dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/material_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/conSearchInsideGuide2"
                app:layout_constraintTop_toBottomOf="@id/searchManagementCheckBox" />

            <CheckBox
                android:id="@+id/searchElectronicCheckBox"
                android:layout_width="101dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/electronic_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/conSearchInsideGuide2"
                app:layout_constraintTop_toBottomOf="@id/searchHealthCheckBox" />

            <CheckBox
                android:id="@+id/searchErectionCheckBox"
                android:layout_width="66dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/erection_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/conSearchInsideGuide"
                app:layout_constraintTop_toBottomOf="@id/searchEnvironmentCheckBox" />

            <CheckBox
                android:id="@+id/searchChemistryCheckBox"
                android:layout_width="114dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/chemistry_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/conSearchInsideGuide2"
                app:layout_constraintTop_toBottomOf="@id/searchMaterialCheckBox" />

            <CheckBox
                android:id="@+id/searchPlanCheckBox"
                android:layout_width="114dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/plan_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/conSearchInsideGuide2"
                app:layout_constraintTop_toBottomOf="@id/searchElectronicCheckBox" />

            <CheckBox
                android:id="@+id/searchPrintCheckBox"
                android:layout_width="101dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/print_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/conSearchInsideGuide"
                app:layout_constraintTop_toBottomOf="@id/searchErectionCheckBox" />

            <CheckBox
                android:id="@+id/searchSalesCheckBox"
                android:layout_width="92dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/sales_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/conSearchInsideGuide2"
                app:layout_constraintTop_toBottomOf="@id/searchChemistryCheckBox" />

            <CheckBox
                android:id="@+id/searchWelfareCheckBox"
                android:layout_width="92dp"
                android:layout_height="32dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/welfare_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/conSearchInsideGuide2"
                app:layout_constraintTop_toBottomOf="@id/searchPlanCheckBox" />

            <CheckBox
                android:id="@+id/searchAffairsCheckBox"
                android:layout_width="66dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/affairs_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/conSearchInsideGuide"
                app:layout_constraintTop_toBottomOf="@id/searchPrintCheckBox" />

            <CheckBox
                android:id="@+id/searchClothCheckBox"
                android:layout_width="101dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/item_search_interest_checkbox_background"
                android:button="@null"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"
                android:text="@string/cloth_category"
                android:textColor="@drawable/item_search_interest_textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/conSearchInsideGuide2"
                app:layout_constraintTop_toBottomOf="@id/searchSalesCheckBox" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSelectSearch"
            android:layout_width="320dp"
            android:layout_height="36dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/item_search_interest_checkbox_background"
            android:text="선택한 직무로 검색하기"
            android:textColor="@drawable/item_search_interest_textcolor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>