<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.SignUpActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12.5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_go_back"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/sign_up_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearEmailAndBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="51dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSignUpEmail"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/dark_gray"
                app:boxStrokeWidthFocused="1dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@font/noto_sans_kr_regular"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietSignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:hint="@string/sign_up_hint_email"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCertification"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginStart="35dp"
                android:background="@drawable/sign_up_certification_btn"
                android:enabled="false"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/sign_up_certification"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSignUpId"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/dark_gray"
            app:boxStrokeWidthFocused="1dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@font/noto_sans_kr_regular"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearEmailAndBtn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSignUpId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:hint="@string/sign_up_hint_id"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSignUpPw"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/dark_gray"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_gray"
            app:errorEnabled="true"
            app:errorTextAppearance="@font/noto_sans_kr_regular"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilSignUpId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSignUpPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:hint="@string/sign_up_hint_pw"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSignUpRePw"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/dark_gray"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_gray"
            app:errorEnabled="true"
            app:errorTextAppearance="@font/noto_sans_kr_regular"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilSignUpPw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSignUpRePw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:hint="@string/sign_up_hint_repw"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUpNext"
            android:layout_width="320dp"
            android:layout_height="36dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/sign_up_next_btn"
            android:enabled="false"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:text="@string/sign_up_text_next"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilSignUpRePw" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUpLogin"
            android:layout_width="320dp"
            android:layout_height="36dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/sign_up_login_go_btn"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:text="로그인하기"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


    <!--<com.google.android.material.textfield.TextInputLayout-->
    <!--android:id="@+id/TilSignUpEmail"-->
    <!--android:layout_width="215dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:boxBackgroundColor="@color/white"-->
    <!--app:boxStrokeColor="@color/dark_gray"-->
    <!--app:boxStrokeWidthFocused="1dp"-->
    <!--app:errorEnabled="true"-->
    <!--app:hintEnabled="false"-->
    <!--android:layout_marginTop="50dp"-->
    <!--android:layout_marginStart="20dp"-->
    <!--app:errorTextAppearance="@font/noto_sans_kr_regular"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintEnd_toStartOf="@id/BtnCertification"-->
    <!--app:layout_constraintTop_toBottomOf="@id/TvSignUpTitle">-->

    <!--<com.google.android.material.textfield.TextInputEditText-->
    <!--    android:id="@+id/TietSignUpEmail"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:fontFamily="@font/noto_sans_kr_regular"-->
    <!--    android:hint="@string/sign_up_hint_email"-->
    <!--    android:includeFontPadding="false"-->
    <!--    android:inputType="text"-->
    <!--    android:textColor="@color/black"-->
    <!--    android:textColorHint="@color/dark_gray"-->
    <!--    android:textSize="14sp" />-->
    <!--</com.google.android.material.textfield.TextInputLayout>-->

    <!--<androidx.appcompat.widget.AppCompatButton-->
    <!--android:id="@+id/BtnCertification"-->
    <!--android:layout_width="70dp"-->
    <!--android:layout_height="50dp"-->
    <!--android:includeFontPadding="false"-->
    <!--android:textSize="14sp"-->
    <!--android:text="@string/sign_up_certification"-->
    <!--android:textColor="@color/white"-->
    <!--android:fontFamily="@font/noto_sans_kr_medium"-->
    <!--android:background="@drawable/sign_up_certification_btn"-->
    <!--android:enabled="false"-->
    <!--android:layout_marginTop="51dp"-->
    <!--android:layout_marginEnd="20dp"-->
    <!--android:layout_marginStart="20dp"-->
    <!--app:layout_constraintStart_toEndOf="@id/TilSignUpEmail"-->
    <!--app:layout_constraintTop_toBottomOf="@id/TvSignUpTitle"-->
    <!--app:layout_constraintEnd_toEndOf="parent"/>-->
