<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.ClickSearchFragment">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etClickSearch"
            android:layout_width="276dp"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/search_background"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:hint="@string/search_click_hint"
            android:paddingStart="12dp"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClickSearchDelete"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@id/etClickSearch"
            app:layout_constraintEnd_toEndOf="@id/etClickSearch"
            app:layout_constraintTop_toTopOf="@id/etClickSearch" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClickSearchBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_go_back"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClickSearch"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etClickSearch"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conClickRecentRecord"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etClickSearch">

            <TextView
                android:id="@+id/tvClickRecentRecord"
                android:layout_width="58dp"
                android:layout_height="18dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:includeFontPadding="false"
                android:text="@string/recent_search"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/conClickRecentRecord" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecentRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvClickRecentRecord" />

            <TextView
                android:id="@+id/tvClickNoRecentRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/search_no_result"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conClickSearchText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etClickSearch">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvClickSearchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>